feat: reset pre-release platform API to v1
